--- a/react_vite_fundamentos/fundamentos_vite/src/index.css
+++ b/react_vite_fundamentos/fundamentos_vite/src/index.css
@@ -6,3 +6,20 @@
 body {
   background: #e7e6e6ab;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: #ccc;
+  padding: 10px;
+  margin: 10px;
+}
+
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 3px solid rgba(0, 0, 0, 0.055);
+  padding: 10px;
+  font-size: 20px;
+  text-align: center;
+  color: blueviolet;
+}
